<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".app.View.MainActivity"
        android:background="@color/background">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:minHeight="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_toolbar"
                android:layout_alignParentStart="true"
                style="@style/text_toolbar"
        />

        <ImageButton
                android:id="@+id/settings_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@color/colorPrimary"
                android:tint="@color/text"
                android:contentDescription="@string/imagen_ajustes"
                android:src="@drawable/ic_settings"/>


    </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <TextView
            android:id="@+id/title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:layout_marginTop="20dp"
            android:text="@string/title_main_activity"
            style="@style/text_tilte"
    />

    <EditText
            android:id="@+id/precio_sin_descuento_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_text_view"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="25sp"
            android:hint="@string/hint_edit_text_precio_surtidor"
            android:inputType="numberDecimal"
    />
    <LinearLayout
            android:id="@+id/texto_descuento_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/precio_sin_descuento_edit_text"
            android:layout_marginTop="40dp"
    >
        <TextView
                android:id="@+id/porcentaje_descuento_text_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/valor_descuento"
                android:layout_weight="1.0"
                android:textAlignment="textEnd"
                style="@style/text_descuento"
        />
        <TextView
                android:id="@+id/descuento_text_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/descuento_texto"
                android:textAlignment="textStart"
                style="@style/text_descuento"
                android:layout_weight="1.0"
        />
    </LinearLayout>

    <TextView
            android:id="@+id/label_precio_con_descuento_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_below="@+id/texto_descuento_linear_layout"
            android:text="@string/label_precio_con_descuento"
            android:textAlignment="center"
            style="@style/label_precio_con_descuento"
    />

    <LinearLayout
            android:id="@+id/precio_con_descuento_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/label_precio_con_descuento_text_view"
    >
        <TextView
                android:id="@+id/divisa_precio_con_descuento_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/divisa_valor_final"
                android:textAlignment="center"
                android:layout_weight="1.0"
                style="@style/text_precio_con_descuento"
        />
        <TextView
                android:id="@+id/precio_con_descuento_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_valor_final"
                android:textAlignment="textStart"
                android:layout_weight="0.8"
                style="@style/text_precio_con_descuento"
        />
    </LinearLayout>


</RelativeLayout>