<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:padding="10dp"
>

    <TextView
            android:id="@+id/title_alert_dialog_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/tilte_porcentaje_descuento"
            style="@style/text_tilte"
    />

    <EditText
            android:id="@+id/porcentaje_descuento_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_alert_dialog_text_view"
            android:layout_marginTop="10dp"
            android:hint="@string/porcentaje_descuento_hint"
            android:inputType="numberDecimal"
    />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/porcentaje_descuento_edit_text"
            android:layout_marginTop="10dp"
            android:padding="10dp"
    >

        <Button
                android:id="@+id/cancelar_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/cancelar_button"
                android:layout_weight="1.0"
                style="@style/button"
                android:layout_marginRight="10dp"
        />
        <Button
                android:id="@+id/guardar_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/guardar_button"
                android:layout_weight="1.0"
                style="@style/button"
        />

    </LinearLayout>

</RelativeLayout>