<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main2"
        tools:context=".app.View.Main2Activity">

    <TextView
            android:id="@+id/title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:layout_marginTop="20dp"
            android:text="@string/title_main_activity"
            style="@style/text_tilte"
    />

    <EditText
            android:id="@+id/precio_sin_descuento_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_text_view"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="25sp"
            android:hint="@string/hint_edit_text_precio_surtidor"
            android:inputType="numberDecimal"
            android:textAlignment="center"
    />

    <android.support.v7.widget.CardView android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:id="@+id/descuentoCard"
                                        android:layout_below="@+id/precio_sin_descuento_edit_text"
                                        android:layout_marginLeft="20dp"
                                        android:layout_marginRight="20dp"
                                        android:layout_marginTop="40dp"
    >

        <LinearLayout
                android:id="@+id/texto_descuento_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/precio_sin_descuento_edit_text"
                android:background="@color/background"
        >
            <TextView
                    android:id="@+id/porcentaje_descuento_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/valor_descuento"
                    android:layout_weight="1.0"
                    style="@style/text_descuento"
            />
            <TextView
                    android:id="@+id/descuento_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/descuento_texto"
                    android:textAlignment="textStart"
                    android:layout_margin="2dp"
                    android:layout_weight="1.0"
                    style="@style/text_descuento"
            />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/descuentoCard"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
    >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                android:background="@color/background"
        >
            <TextView
                    android:id="@+id/label_precio_con_descuento_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/texto_descuento_linear_layout"
                    android:text="@string/label_precio_con_descuento"
                    android:textAlignment="center"
                    style="@style/label_precio_con_descuento"
            />

            <LinearLayout
                    android:id="@+id/precio_con_descuento_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="20dp"
                    android:layout_below="@+id/label_precio_con_descuento_text_view"
            >

                <TextView
                        android:id="@+id/precio_con_descuento_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_valor_final"
                        android:layout_margin="10px"
                        style="@style/text_precio_con_descuento"
                />
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>